[package]
name = "hebbot"
version = "2.1.0"
authors = ["Felix Häcker <haeckerfelix@gnome.org>"]
edition = "2018"

[dependencies]
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk" }
serde = "1.0"
serde_json = "1.0"
url = "2.2"
tokio = { version = "1.29", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.5"
rand = "0.8"
mime = "0.3"
toml = "0.5"
async-process = "1.2"
reqwest = { version = "0.11.18", features = ["rustls-tls", "gzip", "trust-dns", "json"], default-features = false, optional = true }
cfg-if = "1.0.0"

[features]
default = ["ping-rooms"]
ping-rooms = ["dep:reqwest"]
